add small change

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </li>
     </ul>
     <button onclick="myFunction()">Rave party!!!!!</button>
+    <h6>uuendus</h6>
 
     <script>
         let colors = ["blue", "red", "yellow", "green", "orange", "white", "black", "cyan", "beige", "gray"];
