--- a/models/models.html
+++ b/models/models.html
@@ -8,5 +8,9 @@
 </head>
 <body id="test3">
     <h1>Models</h1>
+    <ul>
+        <li><a href="kanban.html">kanban</a></li>
+    </ul>
+    
 </body>
 </html>
