--- a/models/models.html
+++ b/models/models.html
@@ -10,6 +10,7 @@
     <h1>Models</h1>
     <ul>
         <li><a href="kanban.html">kanban</a></li>
+        <li><a href="waterfall.html">waterfall</a></li>
     </ul>
     
 </body>
