add Vmodel.html and incremental.html

--- a/models/models.html
+++ b/models/models.html
@@ -11,6 +11,8 @@
     <ul>
         <li><a href="kanban.html">kanban</a></li>
         <li><a href="waterfall.html">waterfall</a></li>
+        <li><a href="Vmodel.html">V-model</a></li>
+        <li><a href="incremental.html">Incremental model</a></li>
     </ul>
     
 </body>
