--- a/models/waterfall.html
+++ b/models/waterfall.html
@@ -7,9 +7,9 @@
     <title>Waterfall</title>
 </head>
 <body>
-    <h1>Kanban</h1>
+    <h1>Waterfall</h1>
     <hr>
-    <h2>Kanban: Advantages and Disadvantages</h2>
+    <h2>Waterfall: Advantages and Disadvantages</h2>
     <table border = "1">
         <tr>
             <th></th>
