--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     <button onclick="myFunction()">Rave party!!!!!</button>
     <h6>uuendus</h6>
-    <div id="snake">&#9729;</div>
+    <div id="snake" style="font-size: 100px;">&#9822;</div>
 
     <script>
         let x = 0;
