--- a/models/models.html
+++ b/models/models.html
@@ -13,6 +13,7 @@
         <li><a href="waterfall.html">waterfall</a></li>
         <li><a href="Vmodel.html">V-model</a></li>
         <li><a href="incremental.html">Incremental model</a></li>
+        <li><a href="iterative.html">Iterative model</a></li>
     </ul>
     
 </body>
