--- a/models/models.html
+++ b/models/models.html
@@ -14,6 +14,7 @@
         <li><a href="Vmodel.html">V-model</a></li>
         <li><a href="incremental.html">Incremental model</a></li>
         <li><a href="iterative.html">Iterative model</a></li>
+        <li><a href="spiral.html">Spiral model</a></li>
     </ul>
     
 </body>
