--- a/models/models.html
+++ b/models/models.html
@@ -15,6 +15,7 @@
         <li><a href="incremental.html">Incremental model</a></li>
         <li><a href="iterative.html">Iterative model</a></li>
         <li><a href="spiral.html">Spiral model</a></li>
+        <li><a href="scrum.html">Scrum</a></li>
     </ul>
     
 </body>
