--- a/models/models.html
+++ b/models/models.html
@@ -9,13 +9,14 @@
 <body id="test3">
     <h1>Models</h1>
     <ul>
-        <li><a href="kanban.html">kanban</a></li>
         <li><a href="waterfall.html">waterfall</a></li>
         <li><a href="Vmodel.html">V-model</a></li>
         <li><a href="incremental.html">Incremental model</a></li>
         <li><a href="iterative.html">Iterative model</a></li>
         <li><a href="spiral.html">Spiral model</a></li>
         <li><a href="scrum.html">Scrum</a></li>
+        <li><a href="extremeProgramming.html">Extreme Programming</a></li>
+        <li><a href="kanban.html">kanban</a></li>
     </ul>
     
 </body>
