--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="models/models.html">Models</a>
         </li>
+        <li>
+            <a href="uml/umls.html">UML</a>
+        </li>
     </ul>
     <button onclick="myFunction()">Rave party!!!!!</button>
     <h6>uuendus</h6>
