--- a/uml/umls.html
+++ b/uml/umls.html
@@ -110,7 +110,7 @@
     <button class="accordion">BitCoin Calculator App Activity Diagram</button>
     <div class="panel">
         <p><a href="https://github.com/RoaldValja/TARge20-BitcoinCalculatorApp" target="_blank">My BitCoin Calc</a></p>
-        <img src="../images/" alt="">
+        <img src="../images/BitCoinActivityDiagram.PNG" alt="Bit Coin Activity Diagram">
     </div>
 
     <footer style="text-align: center; margin-top: 5rem;">
