--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>
             <a href="uml/umls.html">UML</a>
         </li>
+        <li>
+            <a href="erd/erd.html">ERD</a>
+        </li>
     </ul>
     <button onclick="myFunction()">Rave party!!!!!</button>
     <h6>uuendus</h6>
