add git and github notes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li>
             <a href="erd/erd.html">ERD</a>
         </li>
+        <li>
+            <a href="git/git-notes.html">Git and GitHub</a>
+        </li>
     </ul>
     <button onclick="myFunction()">Rave party!!!!!</button>
     <h6>uuendus</h6>
