add coming soon page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li>
             <a href="git/git-notes.html">Git and GitHub</a>
         </li>
+        <li>
+            <a href="coming_soon_landing/index.html">Coming Soon</a>
+        </li>
     </ul>
     <button onclick="myFunction()">Rave party!!!!!</button>
     <h6>uuendus</h6>
